@@ -16,7 +16,7 @@ import ErrorCode
 from dq2.clientapi import DQ2
 from dq2.filecatalog.FileCatalogUnknownFactory import FileCatalogUnknownFactory
 from dq2.filecatalog.FileCatalogException import FileCatalogException
-from rucio.common.exception import FileConsistencyMismatch,DataIdentifierNotFound
+from rucio.common.exception import FileConsistencyMismatch,DataIdentifierNotFound,UnsupportedOperation
 
 from DDM import rucioAPI
 
@@ -422,6 +422,7 @@ class AdderAtlasPlugin (AdderPluginBase):
                     DataIdentifierNotFound,
                     RucioFileCatalogException,
                     FileConsistencyMismatch,
+                    UnsupportedOperation,
                     exceptions.KeyError):
                 # fatal errors
                 errType,errValue = sys.exc_info()[:2]
